@@ -1,3 +1,6 @@
+2018-08-13 - version 0.9.0 RC2
+[+] New control: LoginDialog (a dialog with username and password fields)
+
 2018-08-04 - version 0.9.0 RC1
 [+] New control: File Picker (a dialog for file save/load operations)
 [+] New property for Label: TextDisplay. It defines which part of Label title
